<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.dailydo.screens.MainFragment"

        android:label="@string/all_tusks"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_createTaskFragment"
            app:destination="@id/createTaskFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
        <action
            android:id="@+id/action_mainFragment_to_calendarTasksFragment"
            app:destination="@id/calendarTasksFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
        <action
            android:id="@+id/action_mainFragment_to_statisticsTasksFragment"
            app:destination="@id/statisticsTasksFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
        <action
            android:id="@+id/action_mainFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
        <action
            android:id="@+id/action_mainFragment_to_taskFragment"
            app:destination="@id/taskFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/createTaskFragment"
        android:name="com.example.dailydo.screens.CreateTaskFragment"
        android:label="@string/create_tusk"
        tools:layout="@layout/fragment_create_task" />
    <fragment
        android:id="@+id/calendarTasksFragment"
        android:name="com.example.dailydo.screens.CalendarTasksFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar_tasks" />
    <fragment
        android:id="@+id/statisticsTasksFragment"
        android:name="com.example.dailydo.screens.StatisticsTasksFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics_tasks" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.dailydo.screens.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.dailydo.screens.TaskFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_task" />
</navigation>